--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 JOON_URI ="mongodb+srv://jooneli:K9iVhF8IWHfrbWuQ@cluster0.2mniyrv.mongodb.net/joonData?retryWrites=true&w=majority"
+JOON_SECRET_KEY=CODINGEVERYDAY7111
